syntax = "proto3";
option go_package = "pusherpb";

import "github.com/qiwitech/qdp/proto/chainpb/chain.proto";

// Pusher API
package pusher;

message Status {
  // A simple error code that can be easily handled by the client.
  int32 code = 1;

  // A developer-facing human-readable error message in English. It should
  // both explain the error and offer an actionable resolution to it.
  string message = 2;

  // Additional error information that the client code can use to handle
  // the error, such as retry delay or a help link.
  // repeated google.protobuf.Any details = 3;
}

enum PushCode {
  OK = 0;
  INTERNAL_ERROR = 1;
}

message PushRequest { repeated chain.Txn txns = 1; }

message PushResponse { Status status = 1; }

message PushSettingsRequest { repeated chain.Settings settings = 1; }

message PushSettingsResponse { Status status = 1; }

service PusherService { rpc Push(PushRequest) returns (PushResponse); }

service SettingsPusherService {
  rpc PushSettings(PushSettingsRequest) returns (PushSettingsResponse);
}
